code: adds csv file

--- a/M5_project.ipynb
+++ b/M5_project.ipynb
@@ -71,7 +71,7 @@
       },
       "outputs": [],
       "source": [
-        "data = pd.read_csv('/Users/apple/Desktop/amsterdam_tech/m5w5/archive/student-mat.csv')"
+        "data = pd.read_csv('student-mat.csv')"
       ]
     },
     {
